@@ -2,7 +2,6 @@ package edu.ksu.canvas.aviation.controller;
 
 import java.text.SimpleDateFormat;
 import java.util.Date;
-import java.util.List;
 
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,11 +18,10 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.ModelAndView;
 
 import edu.ksu.canvas.aviation.entity.AviationStudent;
-import edu.ksu.canvas.aviation.entity.Makeup;
 import edu.ksu.canvas.aviation.form.MakeupForm;
 import edu.ksu.canvas.aviation.form.MakeupValidator;
-import edu.ksu.canvas.aviation.repository.AviationStudentRepository;
-import edu.ksu.canvas.aviation.repository.MakeupRepository;
+import edu.ksu.canvas.aviation.services.AviationStudentService;
+import edu.ksu.canvas.aviation.services.MakeupService;
 import edu.ksu.canvas.error.NoLtiSessionException;
 import edu.ksu.lti.model.LtiSession;
 
@@ -32,19 +30,19 @@ import edu.ksu.lti.model.LtiSession;
 @Scope("session")
 @RequestMapping("/studentMakeup")
 public class MakeupController extends AviationBaseController {
-    
+
     private static final Logger LOG = Logger.getLogger(MakeupController.class);
-    
+
     @Autowired
-    private AviationStudentRepository studentRepository;
-    
+    private MakeupService makeupService;
+
     @Autowired
-    private MakeupRepository makeupRepository;
-    
+    private AviationStudentService studentService;
+
     @Autowired
     private MakeupValidator validator;
-    
-    
+
+
     @InitBinder
     protected void initBinder(WebDataBinder binder) {
         SimpleDateFormat dateFormat = new SimpleDateFormat("MM/dd/yyyy");
@@ -55,71 +53,61 @@ public class MakeupController extends AviationBaseController {
     @RequestMapping("/{sectionId}/{studentId}")
     public ModelAndView studentMakeup(@PathVariable String sectionId, @PathVariable String studentId) throws NoLtiSessionException {
         LtiSession ltiSession = ltiLaunch.getLtiSession();
-        LOG.info("eid: "+ltiSession.getEid()+" is viewing makeup data");
-        
+        LOG.info("eid: " + ltiSession.getEid() + " is viewing makeup data");
+
         return studentMakeup(sectionId, studentId, false);
     }
 
     private ModelAndView studentMakeup(String sectionId, String studentId, boolean addEmptyEntry) {
-        AviationStudent student = studentRepository.findByStudentId(new Long(studentId));
-        List<Makeup> makeups = makeupRepository.findByAviationStudentOrderByDateOfClassAsc(student);
-        if(addEmptyEntry) {
-            makeups.add(new Makeup());
-        }
-        
-        MakeupForm makeupForm = new MakeupForm();
-        makeupForm.setEntriesFromMakeEntities(makeups);
-        makeupForm.setSectionId(Long.valueOf(sectionId));
-        makeupForm.setStudentId(Long.valueOf(studentId));
-        
+        AviationStudent student = studentService.getStudent(new Long(studentId));
+        MakeupForm makeupForm = makeupService.createMakeupForm(Long.valueOf(studentId), Long.valueOf(sectionId), addEmptyEntry);
+
         ModelAndView page = new ModelAndView("studentMakeup");
         page.addObject("sectionId", sectionId);
         page.addObject("student", student);
         page.addObject("makeupForm", makeupForm);
-        
+
         return page;
     }
-    
-    @RequestMapping(value = "/deleteMakeup/{sectionId}/{studentId}/{makeupId}")
-    public ModelAndView deleteMakeup(@PathVariable String sectionId, @PathVariable String studentId, @PathVariable String makeupId) throws NoLtiSessionException {
-        LtiSession ltiSession = ltiLaunch.getLtiSession();
-        LOG.info("eid: "+ltiSession.getEid()+" is deleting a makeup entry.");
-        
-        persistenceService.deleteMakeup(makeupId);
-        return studentMakeup(sectionId, studentId);
-    }
-    
-    
+
     @RequestMapping(value = "/save", params = "saveMakeup", method = RequestMethod.POST)
     public ModelAndView saveMakeup(@ModelAttribute MakeupForm makeupForm, BindingResult bindingResult) throws NoLtiSessionException {
         LtiSession ltiSession = ltiLaunch.getLtiSession();
-        LOG.info("eid: "+ltiSession.getEid()+" is saving makeup data.");
+        LOG.info("eid: " + ltiSession.getEid() + " is saving makeup data.");
         validator.validate(makeupForm, bindingResult);
 
+        boolean allUnsavedAndToBeDeleted = false;
+        if (makeupForm.getEntries() != null) {
+            long count = makeupForm.getEntries().stream()
+                    .filter(entry -> (entry.getMakeupId() == null && entry.isToBeDeletedFlag()))
+                    .count();
+            allUnsavedAndToBeDeleted = makeupForm.getEntries().size() == count;
+        }
+
         if (bindingResult.hasErrors()) {
-            LOG.info("There were errors saving the Makeup form"+ bindingResult.getAllErrors());
+            LOG.info("There were errors saving the Makeup form" + bindingResult.getAllErrors());
             String errorMessage = "Please correct user input and try saving again.";
-            
+
             ModelAndView page = new ModelAndView("studentMakeup");
-            AviationStudent student = studentRepository.findByStudentId(makeupForm.getStudentId());
+            AviationStudent student = studentService.getStudent(makeupForm.getStudentId());
             page.addObject("sectionId", String.valueOf(makeupForm.getSectionId()));
             page.addObject("student", student);
             page.addObject("makeupForm", makeupForm);
             page.addObject("error", errorMessage);
-            
+
             return page;
         } else {
-            persistenceService.updateMakeups(makeupForm);
+            makeupService.save(makeupForm);
         }
-        
+
         ModelAndView page = studentMakeup(String.valueOf(makeupForm.getSectionId()), String.valueOf(makeupForm.getStudentId()), false);
-        if(makeupForm.getEntries() == null){
+        if (makeupForm.getEntries() == null || allUnsavedAndToBeDeleted) {
             page.addObject("nullEntry", true);
         } else {
             page.addObject("updateSuccessful", true);
         }
-        return page; 
-                
+        return page;
+
     }
 
 }
